# snyk-ai-challenge

./: .env.example  .gitignore  README.md  assignment-2.md  assignment.md  pyproject.toml
data/: packages.csv  vulnerability_types.csv
data/advisories/: advisory-001.md  advisory-002.md  advisory-003.md  advisory-004.md  advisory-005.md  advisory-006.md  advisory-007.md  advisory-008.md
data/csv/: severity_levels.csv  vulnerabilities.csv
demo/: openai:gpt-5.2.md
markdowns/: code-block-summaries.md
notebooks/: advisories.ipynb  advisory_markdowns.ipynb  router.ipynb  structure_data_rag.ipynb
src/snyk_ai/: __init__.py  advisories.py  advisories_rag.py  agent.py  database.py  database_rag.py  main.py  models.py  router.py  structured_data_rag.py  structured_data_store.py  synthesizer.py
src/snyk_ai/utils/: __init__.py  log.py  markdown.py  summarize.py  text.py
